--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://spring.c7c86aq8akb8.eu-north-1.rds.amazonaws.com/eazylearn
 spring.datasource.username=admin
 spring.datasource.password=myspringdb
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
